[project]
name = "archive-tool"
version = "0.1.0"
description = "Push finished digitization projects from any machine through Synology to CentOS, with Box sharing tracked in a Google Sheet."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "John Pike" }]
dependencies = [
  "typer>=0.12",
  "questionary>=2.0",
  "gspread>=6.0",
]

# Box poller (Step 5) runs only on CentOS. Install there with `uv sync --extra poller`.
# Kept optional so the laptop orchestrator stays lean and never imports the Box SDK.
[project.optional-dependencies]
poller = [
  "box-sdk-gen[jwt]>=1.5",  # [jwt] pulls PyJWT + cryptography, needed for JWT signing
]

[project.scripts]
archive-project = "archive_tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archive_tool"]
